hello/frontend-deployment-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    track: stable
spec:
  replicas: 2
  selector:
      matchLabels:
        app: my-app
        tier: FE
  template:
    metadata:
      labels:
        app: my-app
        tier: FE
        internet: ingress
        internet-ingress-http: allow
        internet-ingress-https: allow
        workstations: ingress
        workstations-ingress-http: allow
    spec:
      containers:
      - name: webserver
        image: registry.svc.intranet/l-pd-kubernetes/nginx:stable-alpine
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
        volumeMounts:
          - name: frontend-config
            mountPath: /etc/nginx/conf.d
      - name: network-multitool
        image: registry.svc.intranet/l-pd-kubernetes/praqma-network-multitool
        command: 
          - sh
          - -c
          - 'while true; do sleep 3600; done'
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
      volumes:
      - name: frontend-config
        configMap:
          name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-app
    tier: FE
  type: ClusterIP
